pataisytos kelios klaidos. įkeltas sql failas, index.html failai

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -62,4 +62,9 @@
    .pager li.active_link {
      background: #000 !important;
    }
+
+   .customLink, .customLink:hover{
+    color: black;
+    text-decoration: none;
+  }
    
